# nz-mcp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.claude/agents/: README.md  backend-developer.md  data-engineer.md  dx-engineer.md  integration-tester.md  qa-engineer.md  release-engineer.md  security-engineer.md  tech-lead.md  technical-writer.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: adr.yml  ai-task.yml  bug.yml  config.yml  docs.yml  feature.yml  new-tool.yml  refactor.yml  security.yml
.github/workflows/: auto-claim.yml  ci.yml  codeql.yml  release.yml  stale-claim.yml  sync-labels.yml  validate-conventions.yml
docs/actions/: add-tool.md  modify-sql-guard.md  release.md  write-tests.md
docs/adr/: 0001-adoptar-python-3-11.md  0002-driver-nzpy.md  0003-credenciales-keyring.md  0004-integration-tests-locales.md  0005-sin-frontend.md  0006-tools-responsabilidad-unica.md  0007-auditoria-pr.md  0008-required-reviews-cero-solo-dev.md  0009-tool-catalog-bulk-ctas.md  0010-tool-procedure-size.md  0011-tool-procedure-table-logic.md  0012-tool-find-table-references.md  0013-export-ddl-output-path.md  0014-claude-agents-whitelist.md  0014-tool-execute-ddl.md  0015-sql-guard-call-statement.md  0016-tool-switch-database.md  0017-connection-security-level.md  README.md
docs/architecture/: netezza-catalog-queries.md  overview.md  security-model.md  tools-contract.md
docs/guides/: claude-desktop-setup.md
docs/roles/: backend-developer.md  data-engineer.md  dx-engineer.md  qa-engineer.md  release-engineer.md  security-engineer.md  tech-lead.md  technical-writer.md
docs/standards/: coding.md  git-workflow.md  i18n.md  issue-workflow.md  maintainability.md  pr-audit.md  testing.md
scripts/: check_branch_name.py  check_commit_msg.py  check_no_scratch.py  check_pr_body.py  check_pr_title.py  check_repo_hygiene.py
src/nz_mcp/: __init__.py  __main__.py  auth.py  cli.py  config.py  connection.py  diagnostic.py  errors.py  i18n.py  logging_config.py  logging_utils.py  procedure_head_pattern.py  server.py  sql_guard.py
src/nz_mcp/catalog/: __init__.py  call.py  clone.py  databases.py  ddl.py  execute.py  (+14 more)
tests/: conftest.py
tests/contract/: test_mcp_tool_schemas.py  test_mcp_wire.py  test_procedures_contract.py  test_stdio_stdout_json_lines.py
tests/integration/: README.md  test_issue133_insert_multirow.py  test_issue71_regression_smoke.py  test_issue81_ddl_smoke.py  test_probe_catalog_real.py  test_real_describe_table.py  test_real_list_databases.py  test_real_list_schemas.py  test_real_list_tables.py  test_real_views.py
tests/unit/: test_auth.py  test_catalog_clone.py  test_catalog_databases.py  test_catalog_ddl.py  test_catalog_ddl_builder.py  test_catalog_describe_table.py  test_catalog_execute.py  test_catalog_formatters.py  test_catalog_identifier.py  test_catalog_nzplsql_parser.py  test_catalog_probe.py  test_catalog_procedures.py  test_catalog_queries.py  test_catalog_resolver.py  test_catalog_row_shape.py  test_catalog_schemas.py  test_catalog_tables.py  test_catalog_tables_introspection.py  test_catalog_views.py  test_catalog_write.py  test_check_no_scratch.py  test_check_pr_body.py  test_check_repo_hygiene.py  test_cli.py  test_cli_internals.py  test_config.py  test_connection.py  test_connection_stub.py  test_diagnostic.py  test_errors.py  test_i18n.py  test_io_safe_write.py  test_logging_config.py  test_logging_utils.py  test_nzplsql_iter_statements.py  test_nzplsql_parse_sections.py  test_nzplsql_strip_comments.py  test_nzplsql_table_references.py  test_safe_read.py  test_server_json_schema.py  (+25 more)
(+21 files in other folders)
